HTML and CSS file updated

--- a/Google.html
+++ b/Google.html
@@ -38,13 +38,18 @@
 		<div class="btn" id="ifl">I'm Feeling Lucky</div>
 		
 		<div id="footer">
+			<span>
 			<p class="text">Advertising</p>
 			<p class="text">Business</p>
 			<p class="text">About</p>
+			</span>
+			
+			<span id="asd">
 			<p class="text">Privacy</p>
 			<p class="text">Terms</p>
 			<p class="text">Settings</p>
 			<p class="text">Use Google.com</p>
+			</span>
 		</div>
 	</body>
 </html>
